restore the readme