@@ -1,132 +1,147 @@
-# EthioRide — Distributed Ride-Sharing System
+## EthioRide: Distributed Ride-Sharing & Transport System
 
-A real-time ride-sharing platform for Addis Ababa built with Java, JavaFX, TCP Sockets, and MySQL.
+EthioRide is a high-concurrency, distributed transport management system designed to solve urban mobility challenges in Addis Ababa. Built with a robust Client-Server architecture, it leverages Java Sockets and Multithreading to facilitate real-time driver-passenger matching, fare calculation, and trip lifecycle management.
 
 ---
 
-## Architecture
+## Key Engineering Features
 
-Three-tier client-server architecture with 5 modules:
+- **High-Concurrency Server:** Utilizes an ExecutorService thread pool to handle simultaneous requests from multiple concurrent users without blocking.
 
-```
+- **Real-time Communication:** Custom TCP/IP socket protocol for low-latency synchronization between the Passenger and Driver applications.
+
+- **Intelligent Matching Engine:** Implements a location-aware algorithm to connect passengers with the nearest available drivers, minimizing "dead mileage."
+
+- **Persistent Data Layer:** ACID-compliant storage using JDBC and MySQL for secure user data and trip history.
+
+- **Fault Tolerance:** Implements Object Serialization for system state snapshots and logging for audit trails.
+
+---
+
+## System Architecture & Design
+
+The system follows a **Three-Tier Architecture** to ensure modularity and scalability.
+
+- **Client Layer (JavaFX):** Separate interfaces for Passengers (ride requests, fare estimation) and Drivers (availability toggle, trip fulfillment).
+
+- **Application Server:** The central engine managing the MatchmakingEngine, SessionManager, and TransactionCoordinator.
+
+- **Data Layer:** A relational schema optimized for ride telemetry and role-based access control (RBAC).
+
+---
+
+## System Architecture
+
+![System Architecture](docs/diagrams/system-architecture.png)
+
+---
+
+## Folder Structure
+
+```text
 EthioRide/
-├── shared/          # DTOs, enums, protocol (MessageType)
-├── server/          # TCP server, JDBC, business logic
-├── client-passenger/# Passenger JavaFX app
-├── client-driver/   # Driver JavaFX app
-└── admin-dashboard/ # Admin JavaFX dashboard
+│
+├── pom.xml                        
+├── README.md
+├── .gitignore
+│
+├── docs/
+│   ├── architecture/
+│   ├── diagrams/
+│   ├── api-specs/
+│   └── workflow/
+│
+├── scripts/
+│   ├── start-server.sh
+│   ├── start-passenger.sh
+│   ├── start-driver.sh
+│   └── docker/
+│       ├── Dockerfile.server
+│       └── docker-compose.yml
+│
+├── data/                           
+│   ├── logs/
+│   ├── snapshots/
+│   └── exports/
+│
+├── shared/                         
+│   ├── pom.xml
+│   └── src/
+│       ├── main/
+│       └── test/
+│
+├── server/
+│   ├── pom.xml
+│   └── src/
+│       ├── main/
+│       └── test/
+│
+├── client-passenger/
+│   ├── pom.xml
+│   └── src/
+│
+├── client-driver/
+│   ├── pom.xml
+│   └── src/
+│
+└── tests/
+    ├── unit/
+    ├── integration/
+    └── stress/
 ```
+
+---
+
+## Technical Challenges & Solutions
+
+- **Double-Booking Problem:**  
+  ReentrantLocks are implemented in the MatchingEngine to ensure atomic state updates.
+
+- **Network Resiliency:**  
+  Heartbeat mechanism and GracefulShutdown hook clean server resources.
+
+- **Low-Bandwidth Optimization:**  
+  Lightweight serialized DTO protocol supports slower networks.
 
 ---
 
 ## Tech Stack
 
-| Layer       | Technology                        |
-|-------------|-----------------------------------|
-| Language    | Java 17                           |
-| UI          | JavaFX 17 (pure Java, no FXML)    |
-| Networking  | Java TCP Sockets                  |
-| Database    | MySQL + JDBC                      |
-| Pricing     | Google Maps Distance Matrix API   |
-| Auth        | SHA-256 password hashing          |
+- **Language:** Java 17+
+- **Networking:** Java Sockets (TCP), RMI (Optional)
+- **Concurrency:** Threads, ThreadPools
+- **GUI:** JavaFX / CSS
+- **Persistence:** JDBC, MySQL, File I/O (CSV Reports)
 
 ---
 
-## Prerequisites
+## Installation
 
-- JDK 17 (Eclipse Adoptium recommended)
-- JavaFX SDK 17 → `C:\javafx-sdk-17.0.17\lib`
-- MySQL 8.x
-- IntelliJ IDEA
-- `mysql-connector-j-9.x.jar` in `lib/` folder
-
----
-
-## Database Setup
+### Clone
 
 ```bash
-mysql -u root -p < server/src/main/resources/schema.sql
-mysql -u root -p < server/src/main/resources/schema_pricing.sql
-mysql -u root -p < server/src/main/resources/default_admin.sql
+git clone https://github.com/Maxd646/EthioRide.git
+cd EthioRide
 ```
 
-Update `server/src/main/resources/db.properties` with your MySQL password.
+### Configure Database
+
+Update:
+
+```
+server/src/main/resources/db.properties
+```
+
+Add your MySQL credentials.
 
 ---
 
-## Default Admin Credentials
+## Build & Run
 
+```bash
+# Start the Server
+java -cp bin com.ethioride.server.Main
+
+# Start Passenger Client
+java -cp bin com.ethioride.client.PassengerApp
 ```
-Email:    admin@ethioride.com
-Phone:    +251 900 000 000
-Password: admin123
-```
-
----
-
-## Run Order
-
-1. **server** — must start first (port 9090)
-2. **admin-dashboard** — system management
-3. **client-passenger** — passenger app
-4. **client-driver** — driver app
-
----
-
-## IntelliJ Setup
-
-1. `File → Project Structure → Modules`
-2. Add JavaFX SDK to each module's dependencies
-3. Add `lib/mysql-connector-j-9.x.jar` to **server** module dependencies
-4. Set VM options for JavaFX modules:
-   ```
-   --module-path C:\javafx-sdk-17.0.17\lib --add-modules javafx.controls,javafx.fxml
-   ```
-
----
-
-## Features
-
-### Admin Dashboard
-- Login with email or phone
-- View/manage all users (passengers, drivers, admins)
-- Add drivers and admins
-- View trips
-- Manage pricing rules (base fare, per km rate, per minute rate)
-
-### Passenger App
-- Register / Login
-- Request rides with pickup & dropoff
-- Real-time price estimate via Google Maps API
-- Trip history
-
-### Driver App
-- Login
-- Accept/decline ride requests
-- View earnings
-- Trip history
-
-### Server
-- Multi-threaded TCP socket server
-- JDBC MySQL persistence
-- SHA-256 authentication
-- Google Maps distance calculation
-- Dynamic pricing engine
-
----
-
-## Pricing
-
-Prices are calculated using Google Maps Distance Matrix API:
-
-```
-Total = MAX(base_fare + (km × per_km_rate) + (min × per_min_rate) + booking_fee, minimum_fare)
-```
-
-| Category | Base  | Per km | Per min | Min Fare |
-|----------|-------|--------|---------|----------|
-| ECONOMY  | 50 ETB| 15 ETB | 2 ETB   | 30 ETB   |
-| PREMIUM  | 80 ETB| 25 ETB | 3 ETB   | 50 ETB   |
-| ELITE    |120 ETB| 40 ETB | 5 ETB   | 80 ETB   |
-
-See `GOOGLE_MAPS_SETUP.md` for API key setup.
